--- a/css/styles.css
+++ b/css/styles.css
@@ -208,10 +208,6 @@ h3 {
     align-items: center;
   }
 
-  .profile__footer {
-    margin-bottom: 50px;
-  }
-
   img.page-header__item {
     position: relative;
   }
@@ -284,6 +280,7 @@ img.page-header__item {
   clear: both;
   text-align: center;
   image-orientation: center;
+  margin-bottom: 50px;
 }
 
 #Capa_1 {
